--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.11.0"
+  }
 }
